# SourceRank

./: .env.example  .gitignore  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
docs/: ARCHITECTURE.md
src/sourcerank/: __init__.py  config.py  core.py  utils.py
tests/: test_core.py
